--- a/History.html
+++ b/History.html
@@ -27,9 +27,23 @@
 
 
 
+
 <h2>The First photo on the internet</h2>
 <img src="images/photo.jpg" alt="First Web Page" class="center">
 <p>In 1992 Berners-Lee rolled out an update of his browser that could support photos. His team decided to test it, the photo contains a pop parody group called Les Horribles Cernettes taken backstage by an IT developer.Following this it didn't take long for photos to be essential in the Web Design inudstry.Have you found a website without an image?</p>
+
+
+
+
+<h2>The First Ad on the Internet</h2>
+<img src="images/banner.jpg" alt="First Web Page" class="center">
+<p>In 1944 the first advertisment was made. The first banner ad was purchased by AT&T on HotWired.com. The add was clicked on by 44% of people who saw it. Since then banners became a trend in the 90's web design. In the modern time these ad banners are actually disliked by many of people. However these ad banners are still a great way for companies to integrate their own logo's onto websites.</p>
+
+
+
+<h2>Javascript</h2>
+<img src="images/java.jpg" alt="First Web Page" class="center">
+<p>In 1995 one of the most important web programming languages was invented - Javascript. The original name of Javascript was Mocha and later, Livescript. The reason for the invetion was to allow Netscape developers to websites to automate behaviours in their web design.This allowed web design to have interactive elements such as drop-down menus and embedded forms in websites.</p>
 
 </div>
 </body>
