Finished History of WD

--- a/History.html
+++ b/History.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="css/information.css">
 
     <title>My Resume'</title>
+    <style media="screen">
+    table, th, td{
+      border: 1px solid black;
+      text-align: center;
+    }
+    </style>
   </head>
 
   <body>
@@ -43,6 +49,65 @@
 <h2>Javascript</h2>
 <img src="images/java.jpg" alt="First Web Page" class="center">
 <p>In 1995 one of the most important web programming languages was invented - Javascript. The original name of Javascript was Mocha and later, Livescript. The reason for the invetion was to allow Netscape developers to websites to automate behaviours in their web design.This allowed web design to have interactive elements such as drop-down menus and embedded forms in websites.</p>
+
+
+
+
+<h2>Flash</h2>
+<img src="images/flash.gif" alt="Adobe Flash" class="center">
+<p>In 1996 Adobe flash came to life, back then it was called FutureSplash. This technology allowed web designers to make even better websites by intergratin animation, video and audio.Adobe flash is still around today, however these animations are not really used often. These animations still paved the way for the animation and video technology we have now. </p>
+
+
+
+<h2>CSS</h2>
+<img src="images/css.jpg" alt="Adobe Flash" class="center">
+<p>The late 90's saw the invention of cornerstone technology in web design. Cascading Style Sheets, also known as CSS. The software was created by Hakson Wium Lie and Bert Boss in December 1996. CSS gave designer more control over the appearance of their websites. CSS seperates "HTML Content" from the visual content. It makes it more managable.
+</p>
+
+
+
+
+<h3>In Web design these six things are really the most important, although more inventions came out after. These are the foundation of Web Design, most other inventions branched from one of these six inventions.Web design has drastically improved, coding as a whole has never been more important.</h3>
+
+
+
+<table align="center">
+  <tr>
+    <th>First Web page</th>
+    <td>Information on making webpages, and other educational information</td>
+  </tr>
+  <tr>
+    <th>First Photo</th>
+    <td>Photos and images have become a staple in every single webpage, since the very first photo</td>
+  </tr>
+  <tr>
+    <th>First Ad</th>
+    <td>Although sometimes a nuisance, ads are a stable in websites ranging froms  banners to logos, and now even video ads being implimented</td>
+  </tr>
+  <tr>
+    <th>Javascript</th>
+    <td> Things would be a lot harder without this programming languages, java was definitly one fo th ebiggest foundation for web design, and one of the biggest help for developers</td>
+  </tr>
+  <tr>
+    <th>Flash</th>
+    <td>Without flash and these animations, websites wouldn't be the same. Media is very important on websites nowadays</td>
+  </tr>
+  <tr>
+    <th>CSS</th>
+    <td>Before CSS websites didn't look as good as they do now. CSS helped developers make their webpages look way better, and it made it more flexible for them</td>
+  </tr>
+
+
+
+</table>
+
+
+
+
+
+
+
+
 
 </div>
 </body>
