--- a/choice1.html
+++ b/choice1.html
@@ -5,21 +5,82 @@
     <link rel="stylesheet" href="css/ct_layout.css">
     <link rel="stylesheet" href="css/ct_nav.css">
     <link rel="stylesheet" href="css/information.css">
-    <title>My Resume'</title>
-  </head>
-  <body>
 
-    <div class="topnav">
-      
+    <title>Alternate versions of The Avengers</title>
+    <style media="screen">
+    table, th, td{
+      border: 1px solid black;
+      text-align: center;
+    }
+    </style>
+  </head>
+
+  <body>
+<div class="topnav">
       <a href="about.html">About</a>
       <a href="bestwork.html">Bestwork</a>
-      <a href="choice1.html">History of the Avengers</a>
-      <a href="choice2.html">History of The Flash Suits</a>
+      <a href="choice1.html">Alternate versions of The Avengers</a>
+      <a href="choice2.html">Alternate versions of The Flash</a>
       <a href="history.html">History of Web Design</a>
     </div>
 <div class="container">
-<h1>Home</h1>
+  <h1>Alternate versions of The Avengers</h1>
+
+  <h2>The First Avengers</h2>
+  <img src="images/firstavengers.jpg" alt="First Avengers" class="center" style="width:500px;height:500px;">
+<p>The very first time the Avengers made an appearance was in 1963.The original team conisisted of Ant-Man, The Hulk, Iron man, Thor, and the Wasp. The reason was The Avengers was created was because DC Comics made the Justice league, which is a team of superheroes. The fans lovedd it so Marvel decided to do the same and make a team of superheroes. This team of The Avengers only lasted two issues but it is the orginial team.The Avengers in today's movies are actually an alternate version of the Avengers. </p>
 
 
+
+<h2>1,00,00 BC Avengers</h2>
+<img src="images/bcavengers.jpg" alt="1,00,00 BC Avengers" class="center" style="width:500px;height:500px;">
+<p>The prehistoric avengers although not the first ones to e created, are technically the first avengers how had existed. The team consisted of Starbrand,Phoenix, Odin, Agamotto, Iron Fist, Black Panther, and finally Ghost Rider. While all of them have modern versions of their characters. In this comic we see how they would be in their prehistoric form, Black panther does not have his super awesome suit, Ghost rider insead of a motocycle rides a fiery mammoth. They are all in attire that would fix into their time.This is one of my all time favorite comics because it is very unique and completly changes the heros we know of today </p>
+
+
+
+
+<h2>Dark Avenger</h2>
+<img src="images/darkavengers.jpg" alt="Dark Avengers" class="center" style="width:500px;height:500px;">
+<p>The DarK Avengers are exactly what they sound like. The evil villian Norman Osborn had taken over S.H.I.E.L.D. He then wanted to make an Avengers to team aid him in his missions. The biggest difference in this team is that none of the team were actually superheroes. They had a fake, captain America, Thor, Hawkeye, and Captain Marvel. Not only did they have fake Avengers the team also had Bullseye, Moonstone and Venom which were all villians. They also had Wolverine. The Dark Avenger is a comic based on what would happen if basically villains took other the team, instead of actaul good guys, who resigned after Osborn was made the leader. </p>
+
+<br>
+<br>
+<br>
+
+
+
+<h3>While there are way to many alternate versions of The Avengers these are my top favorite versions. In the Chart below is a simple list of the Alternate Avengers team lineup that we have gone over.</h3>
+
+
+
+<table align="center">
+  <tr>
+    <th>First Avengers</th>
+    <td>Ant-man,The Hulk, Iron man, Thor and The Wasp</td>
+  </tr>
+  <tr>
+    <th>1,000,000 BC Avengers</th>
+    <td>Starbrand, Phoenix, Odin, Agamotto, Ironfist,Black Panther, Ghost Rider</td>
+  </tr>
+  <tr>
+    <th>Dark Avengers</th>
+    <td>Fake Iron man, Fake Capain America, Fae thor, Fake Captain marvel, Venom, Hawkeye, Bullseye, and Moonstone</td>
+  </tr>
+  <
+
+
+
+</table>
+
+
+
+
+
+
+
+
+
+</div>
 </body>
+
 </html>
