--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
         <a class="active" href="#home">Home</a>
         <a href="about.html">About</a>
         <a href="bestwork.html">Bestwork</a>
-        <a href="choice1.html">History of the Avengers</a>
-        <a href="choice2.html">History of The Flash Suits</a>
+        <a href="choice1.html">Alternate versions of The Avengers</a>
+        <a href="choice2.html">Alternate versions of The Flash</a>
         <a href="history.html">History of Web Design</a>
       </div>
 <div class="container">
