--- a/choice2.html
+++ b/choice2.html
@@ -4,22 +4,77 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/ct_layout.css">
     <link rel="stylesheet" href="css/ct_nav.css">
-     <link rel="stylesheet" href="css/information.css">
-    <title>My Resume'</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/information.css">
 
-    <div class="topnav">
-      
+    <title>Alternate versions of The Flash</title>
+    <style media="screen">
+    table, th, td{
+      border: 1px solid black;
+      text-align: center;
+    }
+    </style>
+  </head>
+
+  <body>
+<div class="topnav">
       <a href="about.html">About</a>
       <a href="bestwork.html">Bestwork</a>
-      <a href="choice1.html">History of the Avengers</a>
-      <a href="choice2.html">History of The Flash Suits</a>
+      <a href="choice1.html">Alternate versions of The Avengers</a>
+      <a href="choice2.html">Alternate versions of The Flash</a>
       <a href="history.html">History of Web Design</a>
     </div>
 <div class="container">
-<h1>Home</h1>
+  <h1>Alternate versions of The Flash</h1>
+
+  <h2>The First Flash</h2>
+  <img src="images/firstflash.jpg" alt="First Flash" class="center" style="width:500px;height:500px;">
+  <p>Jay Garrick, also known as the first flash. The flash first debuted in the 1940's Flash Comics. Although this is the first flash, Jay is the slowest of all of the flashes.DC Comics eventually reimagined the flash as Barry Allen, as Jay Garrick was from earth 2. So Although he was the first flash to appear, Jay is not the real flash.  </p>
 
 
+
+
+<h2>The Black Flash</h2>
+<img src="images/blackflash.jpg" alt="The Black Flash" class="center" style="width:500px;height:500px;">
+<p>Appearing in 1998, The Black Flash is considered the grim reaper or death to the speedsters(Those who have the power to run fast) In the comics and the show, The Black Flash only appears when it is time for a speester to die.There doesn't appear to be a limit to the Black Fashes speed as whoever tries to outrun him gets caught. It is safe to assume there is no speed limit to the Black Flash. </p>
+
+
+
+
+<h2>Speed Demon</h2>
+<img src="images/speeddemon.jpg" alt="The Speed Demon" class="center" style="width:500px;height:500px;">
+<p>The first appearance of the Speed Demon was in 1996. The Speed demon is a cominaion of The FLash and Ghost Rider.DC and Marvel combined two characters and made them into one. This version as the flash is actaully very slow compared to every of Flash but he does had the powers of the Ghost Rider. Not a very famous or well known flash but still cool.</p>
+
+
+
+<h2>Wally West</h2>
+<img src="images/wallywest.jpg" alt="Wally West" class="center" style="width:500px;height:500px;">
+<p> Wally West is the step step brother of Barry Allen. While they didn't each other at first eventually they met. Wally loved racing cars and every flash has a hobby/>activity that deals with speed. Eventually tthey came together. Wally also had many versions of his Flash character. Wally is always the sidekick of the Flash, in some comics Barry allen sacrifices himself and Wally West takes up the Mantle.      </p>
+
+
+
+
+<h2>Future Flash</h2>
+<img src="images/futureflash.jpg" alt="Future Flash" class="center" style="width:500px;height:500px;">
+<p> First appearing in 2014, the Future flash is actually just the original Barry Allen flash except 20 years later after his partner Wally West is killed.This Flash is much darker. This flash kills his enemies and steal power trying to go back to the past to save Wally. It is a more grim comic, DC was asked to make a comic on the flash is someone close to him died. They did just that. </p>
+
+
+
+<h2>Red Death</h2>
+<img src="images/reddeath.jpg" alt="Red Death" class="center" style="width:500px;height:500px;">
+<p>The Red Death flash first appeared in 2017, This version of flash is again a mash up of two superheroes. This time it is Batman and The Flash. Batman become consumed by fear and asked Barry allen to give him power to defeat evil. Batman was beyond crazy and when Barry refused, he forced the flash to fuse his powers. Upon taking them Batman made his own armor (shown above) and this was the birth of The Red Death Flash. </p>
+
+<br>
+<br>
+<br>
+
+
+
+<h3>Till this day The Flash still continues to have more and more alternate versions of him. There is aleast 25 different versions of the Flash. As the Multiverse is infinite here coul be an infinite amount of flashes. In the end it is up to DC Comics to determine the amount, but as of today there is no limit to the amount of alternate flashes.</h3>
+
+
+
+
+</div>
 </body>
+
 </html>
