--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/ct_nav.css">
     <link rel="stylesheet" href="css/information.css">
 
-    <title>My Resume'</title>
+    <title>History of Web Design</title>
     <style media="screen">
     table, th, td{
       border: 1px solid black;
@@ -19,8 +19,8 @@
 <div class="topnav">
       <a href="about.html">About</a>
       <a href="bestwork.html">Bestwork</a>
-      <a href="choice1.html">History of the Avengers</a>
-      <a href="choice2.html">History of The Flash Suits</a>
+      <a href="choice1.html">Alternate versions of The Avengers</a>
+      <a href="choice2.html">Alternate versions of The Flash</a>
       <a href="history.html">History of Web Design</a>
     </div>
 <div class="container">
