--- a/about.html
+++ b/about.html
@@ -5,22 +5,65 @@
     <link rel="stylesheet" href="css/ct_layout.css">
     <link rel="stylesheet" href="css/ct_nav.css">
     <link rel="stylesheet" href="css/information.css">
-    <title>My Resume'</title>
+    <title>My Resume</title>
   </head>
   <body>
 
-      <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="about.html">About</a>
-        <a href="bestwork.html">Bestwork</a>
-        <a href="choice1.html">Alternate versions of The Avengers</a>
-        <a href="choice2.html">Alternate versions of The Flash</a>
-        <a href="history.html">History of Web Design</a>
-      </div>
+    <div class="topnav">
+
+      <a href="about.html">About</a>
+      <a href="bestwork.html">Bestwork</a>
+      <a href="choice1.html">Alternate versions of The Avengers</a>
+      <a href="choice2.html">Alternate versions of The Flash</a>
+      <a href="history.html">History of Web Design</a>
+    </div>
 <div class="container">
 
 
-<h1>Home</h1>
+<h1>My Resume</h1>
+
+<img src="images/axel.jpg" alt="Profile picture" class="center" style="width:500px;height:500px;">
+<h2>Contact me!</h2>
+<h3>617 Taylor st
+Davenport, Ia 52802
+
+(563)-676-6813
+
+Axel.ramirez377@yahoo.com</h3>
+
+<h2>Experience</h2>
+<h3>Lawn/Pool caretaker
+Currently do yard work or pool work with my dad to earn money. I have also volunteered at Pizza Ranch, Texas Road as a waiter for our schools student senate events. </h3>
+
+<h2>Education</h2>
+<h3>Currently attending West High School taking, intersted in business and math. I plan to attent Iowa state University in the Fall of 2020.</h3>
+
+
+<h2>Activities</h2>
+<h3>Student Senate-  West high schools group for planning, making school events fundraisers, and to volunteer to help the community.
+
+Band/choir- I am also the section leader for  bass clarinets for Band at West High school, as well as being in choir.</h3>
+
+<h2>Accomplishments</h2>
+
+<h3>In my High school career so far I have been able to become the leader of my section for Band.
+
+I have gotten honors  throughout my school years.
+
+I have been in student senate for 3 years, where they only take the most well behaved, respected by teachers and students who set a good example.
+</h3>
+
+
+
+
+
+
+
+<footer>Axel Ramirez
+West High School</footer>
+
+
+
 
   </div>
 </body>
