--- a/choice1.html
+++ b/choice1.html
@@ -28,12 +28,14 @@
 
   <h2>The First Avengers</h2>
   <img src="images/firstavengers.jpg" alt="First Avengers" class="center" style="width:500px;height:500px;">
+  <p><cite>First Avengers</cite> Marvel Comics, The Avengers #1,September. 1963
 <p>The very first time the Avengers made an appearance was in 1963.The original team conisisted of Ant-Man, The Hulk, Iron man, Thor, and the Wasp. The reason was The Avengers was created was because DC Comics made the Justice league, which is a team of superheroes. The fans lovedd it so Marvel decided to do the same and make a team of superheroes. This team of The Avengers only lasted two issues but it is the orginial team.The Avengers in today's movies are actually an alternate version of the Avengers. </p>
 
 
 
 <h2>1,00,00 BC Avengers</h2>
 <img src="images/bcavengers.jpg" alt="1,00,00 BC Avengers" class="center" style="width:500px;height:500px;">
+<p><cite>1,00,00 BC Avengers</cite> Marvel Comics, Marvel Legacy #1, November, 2017
 <p>The prehistoric avengers although not the first ones to e created, are technically the first avengers how had existed. The team consisted of Starbrand,Phoenix, Odin, Agamotto, Iron Fist, Black Panther, and finally Ghost Rider. While all of them have modern versions of their characters. In this comic we see how they would be in their prehistoric form, Black panther does not have his super awesome suit, Ghost rider insead of a motocycle rides a fiery mammoth. They are all in attire that would fix into their time.This is one of my all time favorite comics because it is very unique and completly changes the heros we know of today </p>
 
 
@@ -41,6 +43,7 @@
 
 <h2>Dark Avenger</h2>
 <img src="images/darkavengers.jpg" alt="Dark Avengers" class="center" style="width:500px;height:500px;">
+<p><cite>Dark Avengers</cite> Marvel Comics, Dark Avengers #1, March, 2009
 <p>The DarK Avengers are exactly what they sound like. The evil villian Norman Osborn had taken over S.H.I.E.L.D. He then wanted to make an Avengers to team aid him in his missions. The biggest difference in this team is that none of the team were actually superheroes. They had a fake, captain America, Thor, Hawkeye, and Captain Marvel. Not only did they have fake Avengers the team also had Bullseye, Moonstone and Venom which were all villians. They also had Wolverine. The Dark Avenger is a comic based on what would happen if basically villains took other the team, instead of actaul good guys, who resigned after Osborn was made the leader. </p>
 
 <br>
@@ -78,7 +81,8 @@
 
 
 
-
+<footer>Axel Ramirez
+West High School</footer>
 
 </div>
 </body>
